# cfait

./: .git-blame-ignore-revs  .gitignore  1  ANDROID_NOTIFICATIONS_IMPLEMENTATION.md  Bug_Report.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Feature_Request.md  PULL.md  README.md  SPECS.md  about.toml  build.rs  cargo-sources.yml  cliff.toml  com.trougnouf.Cfait.yml  debug_notifications.sh  org.codeberg.trougnouf.cfait.yml  rust-toolchain.toml  uniffi.toml
.forgejo/workflows/: flathub-release.yml  release.yml  rolling-android.yml  test.yml  test_roll.yml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: release.yml
.zed/: settings.json
LICENSES/: RUST_DEPENDENCIES.html
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/release/: output-metadata.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/cfait/: CfaitApplication.kt  MainActivity.kt
android/app/src/main/java/com/cfait/core/: cfait.kt
android/app/src/main/java/com/cfait/receivers/: AlarmReceiver.kt  BootReceiver.kt  NotificationActionReceiver.kt
android/app/src/main/java/com/cfait/ui/: HelpScreen.kt  HomeScreen.kt  IcsImportScreen.kt  MigrationBanner.kt  SettingsScreen.kt  Shared.kt  TaskDetailScreen.kt  TaskRow.kt
android/app/src/main/java/com/cfait/util/: AlarmScheduler.kt
android/app/src/main/java/com/cfait/workers/: AlarmWorker.kt  BootWorker.kt  CalendarMigrationWorker.kt  CalendarSyncWorker.kt  NotificationActionWorker.kt
android/app/src/main/java/com/trougnouf/cfait/: CfaitApplication.kt  MainActivity.kt
android/app/src/main/java/com/trougnouf/cfait/core/: cfait.kt  cfait.kt.bak
android/app/src/main/java/com/trougnouf/cfait/receivers/: AlarmReceiver.kt  BootReceiver.kt  NotificationActionReceiver.kt
android/app/src/main/java/com/trougnouf/cfait/ui/: AdvancedSettingsScreen.kt  HelpScreen.kt  HomeScreen.kt  IcsImportScreen.kt  SettingsScreen.kt  Shared.kt  TaskDetailScreen.kt  TaskRow.kt  TreeEditorScreen.kt  VirtualTaskRow.kt
android/app/src/main/java/com/trougnouf/cfait/util/: AlarmScheduler.kt  NotificationHelper.kt
android/app/src/main/java/com/trougnouf/cfait/workers/: AlarmWorker.kt  BootWorker.kt  CalendarMigrationWorker.kt  CalendarSyncWorker.kt  NotificationActionWorker.kt  PeriodicSyncWorker.kt
android/app/src/main/res/drawable/: gnome_settings_help_icons.xml  nf_cod_question_face_hugs__9c86d2.xml  nf_md_robot_confused_breeze_face_hugs.xml  nf_md_robot_confused_help_breeze_face_hugs.xml
android/app/src/main/res/values/: ic_launcher_background.xml
android/app/src/main/res/xml/: provider_paths.xml
assets/: cfait.desktop  com.trougnouf.Cfait.metainfo.xml  org.codeberg.trougnouf.cfait.metainfo.xml  rustache.desktop
fastlane/metadata/android/cs/: full_description.txt
fastlane/metadata/android/de/: short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 10001.txt  10003.txt  10004.txt  10007.txt  10008.txt  10009.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  109.txt  200.txt  201.txt  202.txt  203.txt  204.txt  205.txt  207.txt  208.txt  209.txt  300.txt  301.txt  302.txt  303.txt  304.txt  305.txt  306.txt  307.txt  308.txt  309.txt  310.txt  311.txt  312.txt  313.txt  314.txt  400.txt  401.txt  (+17 more)
fastlane/metadata/android/es/: full_description.txt  short_description.txt
fastlane/metadata/android/fr/: short_description.txt
fastlane/metadata/android/it/: short_description.txt
fastlane/metadata/android/nl/: short_description.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt
fastlane/metadata/android/tr/: short_description.txt
fastlane/metadata/android/vi/: full_description.txt  short_description.txt
fastlane/metadata/android/zh_Hans/: full_description.txt  short_description.txt
locales/: cs.json  de.json  en.json  es.json  fr.json  it.json  nl.json  ru.json  tr.json  vi.json  zh_Hans.json
packaging/arch/: PKGBUILD  PKGBUILD-cfait  PKGBUILD-cfait-bin
packaging/arch-bin/: PKGBUILD
packaging/arch-git/: PKGBUILD
scripts/: prepare_release.py  sync_version_code.py
src/: alarm_index.rs  cache.rs  cli.rs  client.rs  color_utils.rs  config.rs  context.rs  controller.rs  help.rs  journal.rs  lib.rs  main.rs  mobile.rs  model.rs  paths.rs  storage.rs  store.rs  system.rs  ui.rs
src/client/: auth.rs  cert.rs  core.rs  manager.rs  middleware.rs  mod.rs  redirect.rs  sync.rs
src/client/tests/: recovery_tests.rs
src/gui/: async_ops.rs  icon.rs  message.rs  mod.rs  state.rs  subscription.rs  view.rs
src/gui/update/: common.rs  mod.rs  network.rs  settings.rs  tasks.rs  view.rs
src/gui/view/: focusable.rs  help.rs  mod.rs  settings.rs  sidebar.rs  syntax.rs  task_row.rs
src/model/: adapter.rs  autocomplete.rs  display.rs  extractor.rs  item.rs  matcher.rs  merge.rs  mod.rs  parser.rs  parser.rs.backup  presentation.rs  recurrence.rs  session.rs
src/tui/: action.rs  handlers.rs  mod.rs  network.rs  state.rs  view.rs
tests/: alarm_logic.rs  alarm_recurrence_fix.rs  alarm_tests.rs  calendar_events_tests.rs  client_core.rs  digest_auth.rs  discover_calendar.rs  duration_range.rs  escape_tests.rs  export_and_roundtrip_tests.rs  ghost_tasks.rs  import_tests.rs  integration_move_flow.rs  journal_propagation.rs  local_concurrency.rs  local_data_loss.rs  local_duplication_bug.rs  local_safety.rs  locking.rs  logic_recurrence.rs  logic_sorting.rs  parser_regressions.rs  parser_stress.rs  rank_propagation.rs  readme_compliance.rs  recurrence_bug_repro.rs  recurrence_duration_fix.rs  recurrence_extensions.rs  recurrence_floating_time.rs  relations_repro.rs  rfc5545_duration_compliance.rs  search_hierarchy.rs  search_operators.rs  search_tests.rs  session_roundtrip.rs  session_tests.rs  smart_input_extensions.rs  smart_input_tests.rs  store_behavior.rs  store_move_task.rs  (+13 more)
tools/: analyze_radicale_logs.py  inspect_bindgen.rs
