[package]
name = "fairouille"
version = "0.1.4"
edition = "2024"
description = "A simple, elegant, and lightweight CalDAV task manager"
default-run = "fairouille" # Default to TUI when running 'cargo run'

[dependencies]
# --- COMMON (Core Logic) ---
chrono = { version = "0.4", features = ["serde"] }
icalendar = "0.17"
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
libdav = "0.9.6"
http = "1.3"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyper-rustls = { version = "0.27", features = ["native-tokio"] }
tower-http = { version = "0.6", features = ["auth"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
directories = "6.0"
anyhow = "1.0"
rrule = "0.14"
serde_json = "1.0"

# --- TUI ONLY (Optional) ---
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }

# --- GUI ONLY (Future) ---
iced = { version = "0.13", features = ["tokio"], optional = true }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:iced"]

[[bin]]
name = "fairouille"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[package.metadata.deb]
maintainer = "Benoit Brummer (Trougnouf) <trougnouf@gmail.com>"
copyright = "2025, Benoit Brummer (Trougnouf)"
license-file = ["LICENSE", "4"]
extended-description = """
Fairouille is a tasks / TODO CalDAV client featuring both a CLI/TUI and a GUI.
It supports smart input, recurrence, and offline caching.
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # Binary 1: TUI
    ["target/release/fairouille", "usr/bin/", "755"],
    # Binary 2: GUI (Note: the bin name is 'gui' in cargo, we rename it to fairouille-gui)
    ["target/release/gui", "usr/bin/fairouille-gui", "755"],
    # Desktop File
    ["assets/fairouille.desktop", "usr/share/applications/", "644"],
]